# chess_game

./: .gitignore  Cargo.toml  chess.txt  run _debug.cmd  run.cmd
src/: chess_graphic.rs  chess_minmax.rs  main.rs
src/chess_graphic/: colors.rs
src/chess_minmax/: main_evalation.rs
src/chess_minmax/main_evalation/: piece_square_tables.rs
