[package]
name = "chess_try"
version = "0.1.0"
authors = ["thanadolps <thanadolps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.1.1"
rand = "0.7.3"
itertools = "0.9.0"
piston_window = "0.108.0"
lru = "0.5.2"
seahash = "4.0.0"
arraydeque = "0.4.5"

[profile.release]
lto = true
opt-level = 3