[package]
name = "chess_try"
version = "0.1.0"
authors = ["thanadolps <thanadolps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
rand = "0.8.4"
itertools = "0.10.3"
piston_window = "0.121.0"
lru = "0.7.2"
seahash = "4.1.0"
arraydeque = "0.4.5"

[profile.release]
lto = true
opt-level = 3
